order confirm email

--- a/themes/electrive/mails/es/order_conf.html
+++ b/themes/electrive/mails/es/order_conf.html
@@ -344,7 +344,7 @@
         <table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td height="40" style="vertical-align:top;height:40px;">
       
     <![endif]-->
-<div style="height: 40px;" height="40">&nbsp;</div>
+<div style="height: 40px;" height="40"> </div>
 <!-- [if mso | IE]>
     
         </td></tr></table>
@@ -468,7 +468,7 @@
 <!-- TITLE ENDING --> <!-- H2 TITLE BEGINING -->
 <tr>
 <td align="left" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-size: 0px; padding: 10px 25px; padding-top: 0px; padding-bottom: 25px; word-break: break-word;">
-<div style="font-family: Open sans, arial, sans-serif; font-size: 16px; line-height: 25px; text-align: left; color: #363a41;" align="left">&iexcl;Gracias por comprar en <span class="label" style="font-weight: bold;">{shop_name}</span>!</div>
+<div style="font-family: Open sans, arial, sans-serif; font-size: 16px; line-height: 25px; text-align: left; color: #363a41;" align="left">¡Gracias por comprar en <span class="label" style="font-weight: bold;">{shop_name}</span>!</div>
 </td>
 </tr>
 <!-- H2 TITLE ENDING --></tbody>
@@ -938,10 +938,10 @@
 <tbody>
 <tr>
 <td style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-<p style="display: block; margin: 13px 0; font-weight: 600;"><img src="https://masmadres.com//mails/themes/modern/assets/baseline-location_on-24px.png" style="border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; width: 15px; margin-right: 10px;" border="0" width="15" /> Direcci&oacute;n de entrega</p>
+<p style="display: block; margin: 13px 0; font-weight: 600;"><img src="https://masmadres.com//mails/themes/modern/assets/baseline-location_on-24px.png" style="border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; width: 15px; margin-right: 10px;" border="0" width="15" /> Dirección de entrega</p>
 <p style="display: block; margin: 13px 0; border: 1px solid #DFDFDF; background-color: #fefefe; padding: 20px; font-size: 14px;" bgcolor="#FEFEFE">{delivery_block_html}</p>
 </td>
-<td width="10" class="space" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; padding: 7px 0;">&nbsp;</td>
+<td width="10" class="space" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; padding: 7px 0;"> </td>
 </tr>
 </tbody>
 </table>
@@ -1011,7 +1011,7 @@
 <tbody>
 <tr>
 <td align="left" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-size: 0px; padding: 10px 25px; word-break: break-word;">
-<div style="font-family: Open sans, arial, sans-serif; font-size: 14px; line-height: 25px; text-align: left; color: #363a41;" align="left">Siga su pedido y descargue su factura en nuestra tienda, vaya a la secci&oacute;n <a href="{history_url}" target="_blank" style="color: #25b9d7; text-decoration: underline; font-weight: 600;">Mis pedidos y detalles</a> en su cuenta de cliente.</div>
+<div style="font-family: Open sans, arial, sans-serif; font-size: 14px; line-height: 25px; text-align: left; color: #363a41;" align="left">Siga su pedido y descargue su factura en nuestra tienda, vaya a la sección <a href="{history_url}" target="_blank" style="color: #25b9d7; text-decoration: underline; font-weight: 600;">Mis pedidos y detalles</a> en su cuenta de cliente.</div>
 </td>
 </tr>
 </tbody>
@@ -1065,7 +1065,7 @@
 <tbody>
 <tr>
 <td align="left" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-size: 0px; padding: 10px 25px; padding-top: 0; word-break: break-word;">
-<div style="font-family: Open sans, arial, sans-serif; font-size: 14px; line-height: 25px; text-align: left; color: #363a41;" align="left">Si tiene una cuenta de invitado, puede seguir su pedido desde la secci&oacute;n: <a href="{guest_tracking_url}" target="_blank" style="color: #25b9d7; text-decoration: underline; font-weight: 600;">"Seguimiento de invitado"</a> de nuestra tienda.</div>
+<div style="font-family: Open sans, arial, sans-serif; font-size: 14px; line-height: 25px; text-align: left; color: #363a41;" align="left">Si tiene una cuenta de invitado, puede seguir su pedido desde la sección: <a href="{guest_tracking_url}" target="_blank" style="color: #25b9d7; text-decoration: underline; font-weight: 600;">"Seguimiento de invitado"</a> de nuestra tienda.</div>
 </td>
 </tr>
 </tbody>
